# EVS_back

./: db.sqlite3  manage.py  pyproject.toml
EVS_back/: settings.py  urls.py  wsgi.py
EVS_back_main/: __init__.py  apps.py  models.py  urls.py
EVS_back_main/utils/: __init__.py
EVS_back_main/views/: data.py  user.py
